# fetch-gmail

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
requirements/: requirements.in  requirements.txt
src/fetch_gmail/: fetch_gmail.py  messagestore.py
tests/: messagestore_test.py
