[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch-gmail"
version = "1.1.0"
requires-python = ">=3.11"
description = "Download gmail email details. Captures timestamp, from, delivered-to, and subject."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { email = "preocts@preocts.com", name = "Preocts" },
]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
# Dynamic dependencies are loaded from requirements*.txt files
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[tool.setuptools.dynamic.dependencies]
file = [
    "requirements/requirements.txt",
]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = [
        "requirements/requirements-dev.txt",
    ] }
test = { file = [
        "requirements/requirements-test.txt",
    ] }

[project.urls]
homepage = "https://github.com/Preocts/fetch-gmail"

[project.scripts]
fetch-gmail = "fetch_gmail.fetch_gmail:main"

[tool.setuptools.package-data]
"fetch_gmail" = [
    "py.typed",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.coverage.run]
branch = true
source = [
    "tests",
]
source_pkgs = [
    "fetch_gmail",
]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages",
]
test = [
    "tests/",
    "*/tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
